Web UI: fixed text alignment for some dialogs

--- a/css/widgets.css
+++ b/css/widgets.css
@@ -78,6 +78,7 @@
 	}
 	.titled-input > label > * {
 		display: table-cell;
+		vertical-align: middle;
 	}
 	.titled-input select {
 		width: 100%;
